# qopenai

./: .gitignore  LICENSE  README.md  Untitled.md
.github/workflows/: workflow_dispatch.yml
QOpenAI/: AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  ImageEditor.cpp  ImageEditor.h  QOpenAI.cpp  QOpenAI.h  QOpenAIAudio.cpp  QOpenAIAudio.h  QOpenAIChat.cpp  QOpenAIChat.h  QOpenAICompletions.cpp  QOpenAICompletions.h  QOpenAIEdits.cpp  QOpenAIEdits.h  QOpenAIEmbeddings.cpp  QOpenAIEmbeddings.h  QOpenAIImage.cpp  QOpenAIImage.h  QOpenAIImageEdits.cpp  QOpenAIImageEdits.h  QOpenAIImageVariations.cpp  QOpenAIImageVariations.h  QOpenAIMessage.cpp  QOpenAIMessage.h  QOpenAIMessageModel.cpp  QOpenAIMessageModel.h  QOpenAIModerations.cpp  QOpenAIModerations.h  QOpenAIText.cpp  QOpenAIText.h
doc/: chatCompletions.md  chat_completions.md  completions.md  edits.md  embeddings.md  imageGenerations.md  image_edits.md  image_generations.md  image_variations.md  moderations.md  transcriptions.md  translations.md
documentation/: completions.md  edits.md  imageEdits.md  imageVariations.md  moderations.md  transcriptions.md
example/: CMakeLists.txt  EventInstaller.h  ImagePicker.h  InteractiveImage.cpp  InteractiveImage.h  main.cpp
example/inc/: AudioRecorder.h  InteractiveImage.h
example/qml/: ChatInput.qml  ChatPage.qml  EndPointsPopup.qml  Main.qml  SelectedImagePopup.qml  SessionListView.qml  TextAreaItem.qml
example/resources/: icons.qrc
example/resources/qml/: ChatInput.qml  ChatPage.qml  EndPointsPopup.qml  IconButton.qml  IconItem.qml  Main.qml  PopupItem.qml  SelectedImagePopup.qml  SessionListView.qml  TextAreaItem.qml
example/src/: AudioRecorder.cpp  ImagePicker.mm  InteractiveImage.cpp  main.cpp
qopenai/: CMakeLists.txt  QOpenAI.cpp  QOpenAI.h  QOpenAIAudio.cpp  QOpenAIAudio.h  QOpenAIAuthorization.h  QOpenAIChat.cpp  QOpenAIChat.h  QOpenAIChat.h~HEAD  QOpenAICompletions.cpp  QOpenAICompletions.h  QOpenAIEdits.cpp  QOpenAIEdits.cpp~master  QOpenAIEdits.h  QOpenAIEmbeddings.cpp  QOpenAIEmbeddings.h  QOpenAIImage.cpp  QOpenAIImage.h  QOpenAIImageEdits.cpp  QOpenAIImageEdits.h  QOpenAIImageEdits.h~HEAD  QOpenAIImageVariations.cpp  QOpenAIImageVariations.h~HEAD  QOpenAIMessage.cpp  QOpenAIMessage.h  QOpenAIMessageModel.cpp  QOpenAIMessageModel.h  QOpenAIModerations.cpp  QOpenAIModerations.h
test/: CMakeLists.txt  tst_requests.cpp
test/assets/: audio.m4a
